Fix floating header veritcal horizontal scroll.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -839,6 +839,10 @@ form.button {
 }
 
 /* task sheet */
+.sheetholder {
+	width: 99%;
+}
+
 .tasksheetTable th, .tasksheetTable td  {
 	text-align: center;
 	vertical-align: middle;
